# flameeyes-paperless-automation

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  paperless-automation.sample.toml  pyproject.toml  setup.cfg
flameeyes_paperless/: config.py  default_objects.py  identify.py  main.py  session.py  types.py  utils.py
