# SPDX-FileCopyrightText: 2024 Diego Elio Pettenò
#
# SPDX-License-Identifier: 0BSD

[metadata]
name = flameeyes-paperless-automation
description = Personal Paperless Automation by Flameeyes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Flameeyes/flameeyes-paperless-automation
author = Diego Elio Pettenò
author_email = flameeyes@flameeyes.com
license = MIT
license_files =
    LICENSES/*
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
keywords =
    paperless

[options]
packages = find:
install_requires =
    click
    click-log
    requests
    more_itertools
python_requires = ~= 3.13

[options.extras_require]
dev =
    pytest-mypy
    mypy
    types-setuptools
    types-requests

[options.entry_points]
console_scripts =
    flameeyes-paperless = flameeyes_paperless.main:main

[flake8]
max-line-length = 88
# E501: ignore long line errors, black takes care of them.
# E203: "whitespace before ':'" — conflicts with black
extend-ignore = E501, E203
